force-app/main/default/objects/Opening_Closing_Contract_Selector__mdt/Opening_Closing_Contract_Selector__mdt.object-meta.xml
<CustomObject>
    <description>Opening Closing Flow</description>
    <label>Opening Closing Contract Selector</label>
    <pluralLabel>Opening Closing Contract Selectors</pluralLabel>
</CustomObject>