force-app/main/default/objects/Opening_Closing_Contract_Selector__mdt/fields/Label_En__c.field-meta.xml
<CustomField>
    <fullName>Label_En__c</fullName>
    <label>Label En</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>