force-app/main/default/objects/Opening_Closing_Contract_Selector__mdt/fields/Label_Fr__c.field-meta.xml
<CustomField>
    <fullName>Label_Fr__c</fullName>
    <label>Label Fr</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>