force-app/main/default/objects/Opening_Closing_Contract_Selector__mdt/fields/Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Name__c</fullName>
    <label>Static Resource Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>